<resources>
    <string name="app_name">HB</string>
    <string name="action_kesach">Kệ sách</string>
    <string name="action_khampha">Khám phá</string>
    <string name="action_congdong">Cộng đồng</string>
    <string name="action_canhan">Cá nhân</string>
    <string name="action_home_library">Kệ sách</string>
    <string name="action_home_history">Lịch sử</string>
    <string name="action_avatar">Avatar</string>
    <string name="action_search">Search</string>
    <string name="action_ch">Plus</string>
    <string name="content_description_library">Library</string>
    <string name="dangky">Đăng ký</string>
    <string name="tenhienthi">Tên hiển thị</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="create_new_account">Bạn chưa có tài khoản?</string>
    <string name="type_a_comment">Nhập bình luận của bạn</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="chu_de_toi">Chủ đề tối</string>
    <string name="ngon_ngu">Ngôn ngữ</string>
    <string name="tu_dong_mo_truyen">Tự động mở truyện vừa đọc</string>
    <string name="chuyen_trang_bang_am_luong">Chuyển trang bằng phím âm lượng</string>
    <string name="huong_dan">Hướng dẫn sử dụng</string>
    <string name="co_chu">Cỡ chữ</string>
    <string name="phong_chu">Phông chữ</string>
    <string name="ket_noi">Kết nối với chúng tôi</string>
    <string name="ca_nhan">Cá nhân</string>
    <string name="ung_dung">Ứng dụng</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabDiscovery">Discovery</string>
</resources>